; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_smb2.c_smb2_check_status.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_smb2.c_smb2_check_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.access_sys* }
%struct.access_sys = type { i32, i32, i32 }

@.str = private unnamed_addr constant [20 x i8] c"%s failed: %d, '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32, i8*)* @smb2_check_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smb2_check_status(%struct.TYPE_4__* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.access_sys*, align 8
  %9 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.access_sys*, %struct.access_sys** %11, align 8
  store %struct.access_sys* %12, %struct.access_sys** %8, align 8
  %13 = load i32, i32* %6, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %28

15:                                               ; preds = %3
  %16 = load %struct.access_sys*, %struct.access_sys** %8, align 8
  %17 = getelementptr inbounds %struct.access_sys, %struct.access_sys* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = call i8* @smb2_get_error(i32 %18)
  store i8* %19, i8** %9, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i8*, i8** %9, align 8
  %24 = call i32 @msg_Warn(%struct.TYPE_4__* %20, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %21, i32 %22, i8* %23)
  %25 = load i32, i32* %6, align 4
  %26 = load %struct.access_sys*, %struct.access_sys** %8, align 8
  %27 = getelementptr inbounds %struct.access_sys, %struct.access_sys* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 4
  store i32 -1, i32* %4, align 4
  br label %31

28:                                               ; preds = %3
  %29 = load %struct.access_sys*, %struct.access_sys** %8, align 8
  %30 = getelementptr inbounds %struct.access_sys, %struct.access_sys* %29, i32 0, i32 1
  store i32 1, i32* %30, align 4
  store i32 0, i32* %4, align 4
  br label %31

31:                                               ; preds = %28, %15
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i8* @smb2_get_error(i32) #1

declare dso_local i32 @msg_Warn(%struct.TYPE_4__*, i8*, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
